tests/ui/frontmatter/content-cr.rs
---
package.name = "" # //~ ERROR bare CR not allowed in frontmatter
package.description = "é"
---

// ignore-tidy-cr

pub fn main() {}
